--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -18,81 +18,73 @@
 
             <div class="col-sm">
 
-                {% if in_iframe == false and courseInfo.title is defined %}
-                    <h2 class="course-title">{{ courseInfo.title }}</h2>
-                {% endif %}
-                <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <h2 class="course-title">{{ courseInfo.title }}</h2>
+                <ul class="nav nav-tabs">
 
-                    <div class="collapse navbar-collapse">
-                        <ul class="navbar-nav m-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="tab-1"
+                           data-route="{{ path('edit_presentation_course_info', { 'id': courseInfo.id }) }}"
+                           role="tab" data-toggle="tab" href="#panel_tab-1"
+                           aria-controls="panel_tab-1" aria-selected="true">
+                            Présentation générale
+                        </a>
+                    </li>
 
-                            <li class="nav-item active">
-                                <a class="nav-link" id="tab-1"
-                                   data-route="{{ path('edit_presentation_course_info', { 'id': courseInfo.id }) }}" data-toggle="tab" href="#panel_tab-1"
-                                   aria-controls="panel_tab-1" aria-selected="true">
-                                    Présentation générale
-                                </a>
-                            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab-2"
+                           data-route="{{ path('edit_activities_course_info', { 'id': courseInfo.id }) }}"
+                           role="tab" data-toggle="tab" href="#panel_tab-2"
+                           aria-controls="panel_tab-2" aria-selected="false">
+                            Contenu et activités
+                        </a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" id="tab-2"
-                                   href="{{ path('course_presentation', { 'id': courseInfo.id }) }}" >
-                                    Contenu et activités
-                                </a>
-                            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab-3"
+                           data-route="{{ path('edit_objectives_course_info', { 'id': courseInfo.id }) }}"
+                           role="tab" data-toggle="tab" href="#panel_tab-3"
+                           aria-controls="panel_tab-3" aria-selected="false">
+                            Objectifs du cours
+                        </a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" id="tab-3"
-                                   data-route="{{ path('edit_objectives_course_info', { 'id': courseInfo.id }) }}"
-                                   role="tab" data-toggle="tab" href="#panel_tab-3"
-                                   aria-controls="panel_tab-3" aria-selected="false">
-                                    Objectifs du cours
-                                </a>
-                            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab-4"
+                           data-route="{{ path('edit_mcc_course_info', { 'id': courseInfo.id }) }}"
+                           role="tab" data-toggle="tab" href="#panel_tab-4"
+                           aria-controls="panel_tab-4" aria-selected="false">
+                            Modalités d'évaluation
+                        </a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" id="tab-4"
-                                   data-route="{{ path('edit_mcc_course_info', { 'id': courseInfo.id }) }}"
-                                   role="tab" data-toggle="tab" href="#panel_tab-4"
-                                   aria-controls="panel_tab-4" aria-selected="false">
-                                    Modalités d'évaluation
-                                </a>
-                            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab-5"
+                           data-route="{{ path('edit_equipments_course_info', { 'id': courseInfo.id }) }}"
+                           role="tab" data-toggle="tab" href="#panel_tab-5"
+                           aria-controls="panel_tab-5" aria-selected="false">
+                            Matériel et ressources
+                        </a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" id="tab-5"
-                                   data-route="{{ path('edit_equipments_course_info', { 'id': courseInfo.id }) }}"
-                                   role="tab" data-toggle="tab" href="#panel_tab-5"
-                                   aria-controls="panel_tab-5" aria-selected="false">
-                                    Matériel et ressources
-                                </a>
-                            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab-6"
+                           data-route="{{ path('edit_infos_course_info', { 'id': courseInfo.id }) }}"
+                           role="tab" data-toggle="tab" href="#panel_tab-6"
+                           aria-controls="panel_tab-6" aria-selected="false">
+                            Informations pratiques
+                        </a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" id="tab-6"
-                                   data-route="{{ path('edit_infos_course_info', { 'id': courseInfo.id }) }}"
-                                   role="tab" data-toggle="tab" href="#panel_tab-6"
-                                   aria-controls="panel_tab-6" aria-selected="false">
-                                    Informations pratiques
-                                </a>
-                            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab-7"
+                           data-route="{{ path('edit_closing_remarks_course_info', { 'id': courseInfo.id }) }}"
+                           role="tab" data-toggle="tab" href="#panel_tab-7"
+                           aria-controls="panel_tab-7" aria-selected="false">
+                            Le mot de la fin
+                        </a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" id="tab-7"
-                                   data-route="{{ path('edit_closing_remarks_course_info', { 'id': courseInfo.id }) }}"
-                                   role="tab" data-toggle="tab" href="#panel_tab-7"
-                                   aria-controls="panel_tab-7" aria-selected="false">
-                                    Le mot de la fin
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-
-                </nav>
+                </ul>
 
 
                 <div class="tab-content border border-top-0 p-2">
