--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -382,7 +382,7 @@
 
         $('#infos_level').click(function(){
             var message = '<ul>' +
-                '<li><strong>Débutant</strong> : Ce cours demande peu ou pas de connaissances préaables.</li>' +
+                '<li><strong>Débutant</strong> : Ce cours demande peu ou pas de connaissances préalables.</li>' +
                 '<li><strong>Intermédiaire</strong> : Ce cours demande quelques connaissances préalables.</li>' +
                 '<li><strong>Avancé</strong> : Ce cours demande d\'importantes connaissances préalables.</li>' +
                 '</ul>';
