Add alert on content and activities tab

--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -30,7 +30,9 @@
         </div>
     </div>
 
-
+    <div style="padding: 15px; color: white; background: #FF4422; font-size: 0.92rem;">
+        IMPORTANT : Vous devez ajouter au minimum une section ci-dessous puis la déplier avec <i class="fas fa-caret-right"></i> (à gauche) pour remplir les informations (description et activité).
+    </div>
 
     {{ form_errors(form.sections) }}
     {{ form_widget(form.sections) }}
