add logo in navbar

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -12,7 +12,7 @@
 
 {% block sidebar %}
     <a href="../../index3.html" class="brand-link elevation-4">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+       <span class="brand-text"><img src="{{ asset('images/uca-logo-dark.png') }}" alt="logo" class="brand-image elevation-3" style="opacity: .8"></span>
     </a>
     <div class="sidebar">
         <nav class="mt-2">
