--- a/app/Resources/views/base_layout.html.twig
+++ b/app/Resources/views/base_layout.html.twig
@@ -4,9 +4,10 @@
         {% block navbar %}{% endblock %}
     </nav>
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="../../index3.html" class="brand-link elevation-4">
-            <span class="brand-text"><img src="{{ asset('images/uca-logo-dark.png') }}" alt="logo"
-                                          class="brand-image elevation-3" style="opacity: .8"></span>
+        <a href="{{ logoHref|default('#') }}" class="brand-link elevation-4">
+            <span class="brand-text">
+                <img src="{{ asset('images/uca-logo-dark.png') }}" alt="logo" class="brand-image elevation-3" style="opacity: .8">
+            </span>
         </a>
         {% block sidebar %}{% endblock %}
     </aside>
