--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -38,7 +38,7 @@
                     <tbody>
                     {% for activity in pagination %}
                         <tr>
-                            <td>{{ activity.label }}</td>
+                            <td><a href="{{ path('app_admin_activity_edit', { 'id' : activity.id}) }}">{{ activity.label }}</a></td>
                             <td>{{ activity.mode|trans }}</td>
                             <td>{{ activity.grp|trans }}</td>
                         </tr>
