modal form submission

--- a/app/Resources/views/course_info/presentation/form/synopsis.html.twig
+++ b/app/Resources/views/course_info/presentation/form/synopsis.html.twig
@@ -1,5 +1,5 @@
 <div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Synopsis</h3>
