--- a/app/Resources/views/course_info/presentation/form/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teachers.html.twig
@@ -20,7 +20,7 @@
         </div>
     </div>
 </div>
-<div class="mt-2">
+<div class="d-flex justify-content-center">
     <button type="submit" class="{#focus-submit #}btn btn-primary button-gradient" id="create_button">
         Ajouter
     </button>
