--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
 <div class="card toggle-focus my-2 shadow">
     <div class="card-header">
         <div class="d-flex justify-content-between">
