modal form submission

--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -38,7 +38,7 @@
                     }
                 });
             });
-            $(document).on('submit', 'form', function (e) {
+            $(document).on('submit', 'form.form-focus', function (e) {
                 e.preventDefault();
                 formSubmit($(this), 'submit');
             });
