--- a/app/Resources/views/activity/edit.html.twig
+++ b/app/Resources/views/activity/edit.html.twig
@@ -10,7 +10,9 @@
 
             {{ form_row(form.label) }}
             {{ form_row(form.mode) }}
-            {{ form_row(form.grp) }}
+            {% if form.grp is defined %}
+                {{ form_row(form.grp) }}
+            {% endif %}
             <div class="custom-control custom-switch">
                 {{ form_row(form.obsolete) }}
             </div>
