--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Liste des activités' %}
 {% block subContent %}
+    {% set isActivity = type is same as (constant('AppBundle\\Constant\\ActivityType::ACTIVITY')) %}
 
     <div class="card">
         <div class="card-header">
@@ -12,14 +13,19 @@
                     <div class="col-md-2">
                         {{ form_row(form.mode) }}
                     </div>
-                    <div class="col-md-2">
-                        {{ form_row(form.grp) }}
-                    </div>
+                    {% if isActivity %}
+                        <div class="col-md-2">
+                            {{ form_row(form.grp) }}
+                        </div>
+                    {% endif %}
                     <div class="col-md-3 col-sm-6">
                         <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_activity_index', { 'type' : type })  }}">Réinitialiser les filtres</a>
                     </div>
+                    {% if not isActivity %}
+                        <div class="offset-md-2"></div>
+                    {% endif %}
                     <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new', { 'type' : type })  }}">Ajouter une activité</a>
+                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new', { 'type' : type })  }}">Ajouter une {{ isActivity ? 'activité' : 'évaluation' }}</a>
                     </div>
                 </div>
             {{ form_end(form) }}
@@ -32,7 +38,9 @@
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'a.label') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.mode'|trans, 'a.mode') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.grp'|trans, 'a.grp') }}</th>
+                        {% if isActivity %}
+                            <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.grp'|trans, 'a.grp') }}</th>
+                        {% endif %}
                     </tr>
                     </thead>
                     <tbody>
@@ -40,7 +48,9 @@
                         <tr>
                             <td><a href="{{ path('app_admin_activity_edit', { 'id' : activity.id}) }}">{{ activity.label }}</a></td>
                             <td>{{ activity.mode|trans }}</td>
-                            <td>{{ activity.grp|trans }}</td>
+                            {% if isActivity %}
+                                <td>{{ activity.grp|trans }}</td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                     </tbody>
