--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Liste des activités' %}
+{% set h1 = ('list of ' ~ type) | trans %}
 {% block subContent %}
     {% set isActivity = type is same as (constant('AppBundle\\Constant\\ActivityType::ACTIVITY')) %}
 
@@ -25,7 +25,7 @@
                         <div class="offset-md-2"></div>
                     {% endif %}
                     <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new', { 'type' : type })  }}">Ajouter une {{ isActivity ? 'activité' : 'évaluation' }}</a>
+                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new', { 'type' : type })  }}">Ajouter une {{ type|trans }}</a>
                     </div>
                 </div>
             {{ form_end(form) }}
