--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -11,7 +11,9 @@
     <section>
         {% include('course_info/presentation/view/teachers.html.twig') %}
     </section>
-    {#{% include('course_info/presentation/view/teaching_mode.html.twig') %}#}
+    <section>
+        {% include('course_info/presentation/view/teaching_mode.html.twig') %}
+    </section>
 
 {% endblock %}
 
