--- a/app/Resources/views/course_info/presentation/form/synopsis.html.twig
+++ b/app/Resources/views/course_info/presentation/form/synopsis.html.twig
@@ -76,7 +76,7 @@
         </div>
     </div>
     {{ form_widget(form._token) }}
-    {{ form_end(form, {'render_rest': false }) }}
+    {{ form_end(form) }}
 </div>
 
 <script>
