--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -1,5 +1,5 @@
+<div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
 {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
-<div class="card toggle-focus my-2 shadow">
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Mode d'enseignement</h3>
@@ -136,14 +136,14 @@
             </div>
         </div>
         <div class="mt-2">
-            <button class="update-focus btn btn-primary submit" type="submit">
+            <button class="focus-submit btn btn-primary submit button-gradient" type="submit" data-url="{{ path('course_presentation_teaching_mode', {'id': courseInfo.id, 'action': 'submit' }) }}">
                 Sauvegarder
             </button>
-            <button type="button" class="update-focus btn btn-secondary">
+            <button type="button" class="focus-cancel btn btn-secondary button-gradient" data-url="{{ path('course_presentation_teaching_mode', {'id': courseInfo.id, 'action': 'cancel' }) }}">
                 Annuler
             </button>
         </div>
     </div>
+    {{ form_widget(form._token) }}
+    {{ form_end(form) }}
 </div>
-{{ form_widget(form._token) }}
-{{ form_end(form, {'render_rest': false }) }}
