--- a/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
@@ -1,8 +1,8 @@
-<div class="card toggle-focus my-2 shadow">
+<div class="card toggle-focus my-2 shadow card-syllabus">
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Mode d'enseignement</h3>
-            <button type="button" class="update-focus btn btn-primary">Mettre à jour</button>
+            <button type="button" class="update-focus btn btn-primary button-gradient" data-url="{{ path('course_presentation_teaching_mode', {'id': courseInfo.id }) }}">Mettre à jour</button>
         </div>
     </div>
     <div class="card-body">
